--- a/frontend/my-app/package.json
+++ b/frontend/my-app/package.json
@@ -12,10 +12,12 @@
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.3",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.24.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^10.0.5",
     "redux": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
